# amaru-rpi

./: .gitignore  README.md
app/: Cargo.toml  Makefile  README.md
app/src/: button.rs  main.rs
app/src/backends/: display_hat.rs  mod.rs  simulator.rs
app/src/screens/: chart.rs  color.rs  exit.rs  logo.rs  mod.rs  scan.rs
assets/enclosure/: Part Studio 1 - BAS.stl  Part Studio 1 - HAUT.stl  alim_button.stl  bottom.stl  bouton.stl  button.stl  haut.stl
conf/: amaru.env  amaru.service
scripts/: badge-per-epoch.sh  setup-service.sh
scripts/inky/: README.md  badge_to_inky.py  bitmap-to-inky.py  bitmap_to_inky.py  create-badge.py  create_badge.py  create_logo.py  create_syncing.py  display.py  display_badge.py  display_logo.py  display_syncing.py
