[package]
name = "app"
edition = "2024"
publish = false

[dependencies]
#amaru-kernel = { git = "https://github.com/pragma-org/amaru" }
#amaru-doctor = { git = "https://github.com/jeluard/amaru-doctor" }
#amaru-doctor = { path = "../../amaru-doctor" }
#tui-big-text = { path = "../../tui-widgets/tui-big-text" }
#tui-qrcode = { path = "../../tui-widgets/tui-qrcode" }
mousefood = { git = "https://github.com/j-g00da/mousefood" }
ratatui = "0.30.0-alpha.5"
mipidsi = { version = "0.9.0", optional = true }
rppal = {version = "0.22.1", features = ["hal"], optional = true}
embedded-hal-bus = { version = "0.3.0", optional = true }
embedded-hal = { version = "1.0.0", optional = true }
crossterm = "0.29.0"
palette = "0.7"
embedded-graphics-simulator = { version = "0.7.0", optional = true }
tokio = { version = "1.47.1", features = ["full"] }
tachyonfx = { git = "https://github.com/junkdog/tachyonfx", branch = "ratatui-0.30-preview" }
qrcode = "0.14.1"
indoc = "2.0.6"

[features]
default = ["display_hat"]
simulator = ["embedded-graphics-simulator"]
display_hat = ["mipidsi", "rppal", "embedded-hal-bus", "embedded-hal"]

[workspace.metadata.cross.target.aarch64-unknown-linux-musl]
pre-build = [
  "apt update",
  "apt install -y libclang-dev"
]
[workspace.metadata.cross.target.aarch64-unknown-linux-musl.env]
passthrough = ["LIBCLANG_PATH=/usr/lib/llvm-10/lib"]
